--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
 		<dependency>
     		<groupId>javax.validation</groupId>
     		<artifactId>validation-api</artifactId>
